# haskell-src-transformation

./: .hlint.yaml  CHANGELOG.md  README.md  floskell.json  floskell.toml  haskell-src-transformations.cabal
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci-pipeline.yml
example/TestModules/: TestModuleAlgo.hs  TestModuleCC.hs  TestModuleGE.hs
src/exe/: Main.hs
src/lib/: Algo.hs  Application.hs  CaseCompletion.hs  FreshVars.hs  GuardElimination.hs  Optimization.hs  Renaming.hs
src/lib/HST/: Algo.hs  Application.hs  CoreAlgorithm.hs  Environment.hs  Options.hs
src/lib/HST/Backend/: HSETransformation.hs  Syntax.hs
src/lib/HST/Effect/: Cancel.hs  Env.hs  Fresh.hs  GetOpt.hs  InputFile.hs  InputModule.hs  InputSrc.hs  PatternStack.hs  Report.hs  WithFrontend.hs
src/lib/HST/Environment/: FreshVars.hs  LookupOrReport.hs  Prelude.hs  Renaming.hs
src/lib/HST/Feature/: CaseCompletion.hs  GuardElimination.hs  Optimization.hs
src/lib/HST/Frontend/: Build.hs  FromGHC.hs  FromHSE.hs  HSETransformation.hs  Parser.hs  PrettyPrinter.hs  Syntax.hs  ToGHC.hs  ToHSE.hs  Transformer.hs
src/lib/HST/Frontend/GHC/: Config.hs  From.hs  To.hs
src/lib/HST/Frontend/GHC/Util/: AnyMatch.hs
src/lib/HST/Frontend/HSE/: Config.hs  From.hs  To.hs
src/lib/HST/Frontend/Transformer/: Messages.hs
src/lib/HST/Util/: FreeVars.hs  Messages.hs  PatternMatching.hs  Predicates.hs  PrettyName.hs  Selectors.hs  Subst.hs
src/test/: AlgoTests.hs  BasicTests.hs  Spec.hs
src/test/HST/: AlgoTests.hs  ApplicationTests.hs  CoreAlgorithmTests.hs  EnvironmentTests.hs
src/test/HST/Effect/: CancelTests.hs  FreshTests.hs  InputFileTests.hs  ReportTests.hs  SetExpectation.hs
src/test/HST/Frontend/Transformer/: MessagesTest.hs  MessagesTests.hs
src/test/HST/Test/: Expectation.hs  Parser.hs  Runner.hs
src/test/HST/Util/: FreeVarsTests.hs  MessagesTests.hs  SelectorsTests.hs  SubstTests.hs
tool/: check-formatting.sh  format-code.sh  make-docs.sh  run.sh  test.sh
